--- a/stylesheet.css
+++ b/stylesheet.css
@@ -329,7 +329,7 @@ body
     
     height: 150px;
     width: 23%;
-    background-color: rgb(12, 85, 154);;
+    background-color: rgb(12, 85, 154);
     color: #ffffff;
     justify-content: center;
     vertical-align: middle;
@@ -356,5 +356,56 @@ body
     font-size: 22px;
     font-weight: 500;
     
+  }
+
+  #InfoDiv
+  {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+  }
+
+  #InfoDiv div
+  {
+    padding-left: 5px;
+    box-shadow: 2px 2px 10px grey;
+    width: 40%;
+  }
+
+  #InfoDiv div h2
+  {
+    text-align: center;
+  }
+
+  #ITSkills
+  {
+    padding-left: 10%;
+    justify-content: left;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 20px;
+  }
+
+  #ITSkillsShard
+  {
+    color:rgb(12, 85, 154);
+    min-height: 130px;
+    width: 25%;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    box-shadow: 2px 2px 10px grey;
+  }
+
+  a
+  {
+    text-decoration: none;
+    font-weight: 700;
+    color : red;
   }
 
