--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -4,7 +4,7 @@ body
     margin : auto;
     overflow-x:hidden;
     overflow-y: scroll;
-    background-color: rgb(87, 85, 85);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 20%, rgba(87, 85, 85,1) 50%);
     display: flex;
     flex-direction: column;
     color:#D5F2F5;
