--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -106,7 +106,7 @@ body
     margin-left: 1rem;
     text-decoration: none;
     font-size: 1.5rem;
-    -webkit-text-stroke:1px black;
+    -webkit-text-stroke:0.01rem black;
     color: inherit;
 }
 
@@ -138,13 +138,13 @@ body
 h1
 {
     font-size: 1.8rem;
-    -webkit-text-stroke:0.1rem black
+    -webkit-text-stroke:0.01rem black
 }
 
 h2
 {
     font-size: 1.3rem;
-    -webkit-text-stroke:0.1rem black
+    -webkit-text-stroke:0.01rem black
 }
 
 .HeaderText img
