--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -84,7 +84,7 @@ body
 {
     max-width: 100%;
     height: auto;
-    background-image: linear-gradient(to bottom, rgba(245, 255, 252, 0), rgb(0, 0, 0)),url('Images/snow.jpg');
+    background-image: linear-gradient(to bottom, rgba(245, 255, 252, 0), rgb(0, 0, 0)),url('Images/worldsadrift.jpg');
     background-size: cover;
 }
 
