--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,8 @@
 body 
 {
+    margin-top: 4em;
+    background: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 1) 20% ),url('images/WorldsAdrift.jpg') no-repeat center fixed ;
+    background-size: cover;
     overflow-x: hidden;
     font-size: larger;
     background-color: black;
@@ -9,13 +12,14 @@ body
 
 #StickyBar
 {
+    padding: 0 1em 0 1em;
     top : 0;
     left: 0;
-    height: 70px;
+    height: 3.3em;
     background-color: rgb(12, 85, 154);
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     color:aliceblue;
     position: fixed;
     z-index: 3;
@@ -51,25 +55,17 @@ body
   
 
 
-.HeaderCV
-{   
-
-    margin-left: -1%;
-    width: 101%;
-    height: 450px;
-    justify-content: center;
-
+.Header
+{
+    height: 30em;
 }
 
-.containerHead
+.HeaderText
 {
-    top:0px;
-    width: inherit;
-    height: inherit;
-    justify-content: center;
-    position: absolute;
-    vertical-align: middle;
-    z-index: 2;
+    color: cyan;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container
@@ -79,14 +75,6 @@ body
     padding-top: 5%;    
 }
 
-#BackGroundHead
-{
-    width: 100.5%;
-    height: inherit;
-    background-image: linear-gradient(to bottom, rgba(245, 255, 252, 0), rgb(0, 0, 0)),url('Images/snow.jpg');
-    background-size: cover;
-    z-index: 2; 
-}
 
 #Martin
 {
@@ -122,7 +110,7 @@ body
     font-size: 2.5em;
 }
 
-#Links
+#HeaderLinks
 {
     margin-top: 40px;
     justify-content: center;
@@ -131,7 +119,7 @@ body
     flex-direction: row;
 }
 
-#Links img 
+#HeaderLinks img 
 {
     width: 50px;
     height: 50px;
@@ -139,33 +127,30 @@ body
     margin-left: 5px;
 }
 
-.BodyCV
+#BodyCV
 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: auto;
-    position: relative;
-    justify-content: center;
-    text-align: center;
+  margin: auto;
+  margin-top: 5%;
+  display: flex;
+  width: 100%;
+  position: relative;
+  flex-direction: column;
+  text-align: left;
+  justify-items: center;
 }
 
 .cards
 {
-    color: #2c2c2c;
-    font-size: 14px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-bottom: 80px;
-    align-self: center; 
-    width: 75%;
-    height: auto;
-    background-color: white;
-    justify-content: left;
-    text-align: left;
-    box-shadow: 2px 2px 10px grey;
+  margin:auto;
+  margin-top: 5%;
+  width: 90%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  color: #2c2c2c;
+  background-color: white;
+  box-shadow: 2px 2px 10px grey;
 }
 
 #CompInformatique span
@@ -186,14 +171,21 @@ body
 
 .folioContainer
 {
-    display: flex;
-    flex-direction: row;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  padding-bottom: 5%;
+  scroll-snap-type: x mandatory;
 }
+
+
 
 .folioItem img
 {
-    width: 500px;
-    height: 500px;
+  box-shadow: 2px 2px 10px grey;
+  width: 20rem;
 }
 
 .sidebar {
@@ -263,99 +255,181 @@ body
     .sidebar a {font-size: 18px;}
   }
 
-  .Job
+  #ExperiencesPro
   {
-    margin-top: 20px;
+      margin-top: 3%;
+      overflow-y: hidden;
+      overflow-x: scroll;
+      display: flex;
+      flex-direction: row;
+      margin: auto;
+      padding-bottom: 5%;
+      scroll-snap-type: x mandatory;
+      column-gap: 20em;
+  }
+  
+  .Job
+    {
+      background-color: #e0e0e0;
+      display: flex;
+      flex-direction: row;
+      margin-top: 3%;
+      margin-left: 3%;
+      margin-right: 3%;
+      border-style: solid;
+      border-color: #111;
+      border-width: 0.5px;
+      min-width: 90%;
+      min-height: 25em;
+      scroll-snap-align: center;
+      text-align: left;
+      position: relative;
+      font-size: 1rem;
+      box-shadow: 2px 2px 10px grey;
+      
+    }
+    .LeftPartWork
+    {
+      display: flex;
+      flex-direction: column;
+      row-gap: 15%;
+      width: 45%;
+      background-color: rgb(12, 85, 154);;
+      color: #ffffff;
+      vertical-align:text-top;
+      text-align: center;
+      text-transform: uppercase;
+      padding: 1.5% 1.5% 1.5% 1.5%;
+      
+    }
+  
+    .RightPartWork
+    {
+      background-image: linear-gradient(to bottom, rgba(245,255,252,0) 0%, rgba(245,255,252,1) 79%);
+      display: flex;
+      flex-direction: column;
+      row-gap: 15%;
+      width: 60%;
+      text-align: center;
+      padding: 1.5% 0 0 0;
+    }
+  
+    .Post
+    {
+      margin-top: 3%;
+      font-size: 1.1rem;
+      font-weight: 500;
+      text-decoration: underline;
+    }
+  
+    .Description
+    {
+      padding-left: 1.5%;
+      padding-right: 1.5%;
+      border-width: 0.5px;
+      text-align:start;
+      margin-top: 1.5%;
+      font-size: 1rem;
+      height: 100%;
+      
+    }
+  
+    .Duration
+    {
+      font-size: 0.7rem;
+      margin-top: 3%;
+    }
+    .WorkPlace
+    {
+      margin-top: 2%;
+      font-size: 1rem;
+      font-weight: 500;
+    }
+  
+    .logo
+    {
+      border-style: dashed;
+      align-self: center;
+      width: 40%;
+    }
+  
+    .logo img
+    {
+      width: max-content;
+    }
+
+  
+  #Education
+  {
+    margin-top: 3%;
+    overflow-y: hidden;
+    overflow-x: scroll;
     display: flex;
     flex-direction: row;
-    column-gap: 20px;
-    box-shadow: 2px 2px 10px grey;
+    margin: auto;
+    padding-bottom: 5%;
+    scroll-snap-type: x mandatory;
+    column-gap: 20em;
   }
-  .LeftPartWork
-  {
-    
-    height: 150px;
-    width: 23%;
-    background-color: rgb(12, 85, 154);;
-    color: #ffffff;
-    justify-content: center;
-    vertical-align: middle;
-    text-align: center;
-    text-transform: uppercase;
-    
-  }
-
-  .RightPartWork
-  {
-    max-width: 70%;
-  }
-
-  .Post
-  {
-    margin-top: 30px;
-    font-size: 22px;
-    font-weight: 500;
-  }
-
-  .Description
-  {
-    text-align: justify;
-    margin-top: 20px;
-    font-size: 14px;
-  }
-
-  .Duration
-  {
-    margin-top: 30px;
-  }
-  .WorkPlace
-  {
-    margin-top: 20px;
-    font-size: 22px;
-    font-weight: 500;
-    
-  }
-
   .Class
   {
-    margin-top: 20px;
+    background-color: #e0e0e0;
     display: flex;
     flex-direction: row;
-    column-gap: 20px;
+    margin-top: 3%;
+    margin-left: 3%;
+    margin-right: 3%;
+    border-style: solid;
+    border-color: #111;
+    border-width: 0.5px;
+    min-width: 90%;
+    min-height: 10em;
+    scroll-snap-align: center;
+    text-align: left;
+    position: relative;
+    font-size: 1rem;
     box-shadow: 2px 2px 10px grey;
   }
   .LeftPartEd
   {
     
-    height: 150px;
-    width: 23%;
-    background-color: rgb(12, 85, 154);
+    display: flex;
+    flex-direction: column;
+    row-gap: 15%;
+    width: 45%;
+    background-color: rgb(12, 85, 154);;
     color: #ffffff;
-    justify-content: center;
-    vertical-align: middle;
+    vertical-align:text-top;
     text-align: center;
     text-transform: uppercase;
+    padding: 1.5% 1.5% 1.5% 1.5%;   
     
   }
 
   .RightPartEd
   {
-    max-width: 70%;
+    background-image: linear-gradient(to bottom, rgba(245,255,252,0) 0%, rgba(245,255,252,1) 79%);
+    display: flex;
+    flex-direction: column;
+    row-gap: 15%;
+    width: 60%;
+    text-align: center;
+    padding: 1.5% 1.5% 1.5% 1.5%;
   }
 
   .EdTitle
   {
-    margin-top: 30px;
-    font-size: 22px;
+    margin-top: 3%;
+    font-size: 1.3rem;
     font-weight: 500;
+    text-decoration: underline;
   }
 
   .School
   {
-    margin-top: 20px;
-    font-size: 22px;
+    margin-top: 2%;
+    font-size: 1.2rem;
     font-weight: 500;
-    
   }
 
   #InfoDiv
@@ -380,26 +454,35 @@ body
     text-align: center;
   }
 
+  
+
   #ITSkills
   {
-    padding-left: 10%;
-    justify-content: left;
+    overflow-y: hidden;
+    overflow-x: scroll;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 20px;
+    margin: auto;
+    padding-bottom: 5%;
+    scroll-snap-type: x mandatory;
+    column-gap: 20em;
   }
 
   #ITSkillsShard
   {
-    color:rgb(12, 85, 154);
-    min-height: 130px;
-    width: 25%;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    color:rgb(4, 168, 23);
+    border-style: solid;
+    border-color: #111;
+    border-width: 0.5px;
+    min-width: 90%;
+    scroll-snap-align: center;
+    text-align: left;
+    justify-content: center;
+    position: relative;
+    font-size: 1rem;
     box-shadow: 2px 2px 10px grey;
+    margin-left: 3%;
+    margin-right: 3%;
   }
 
   a
@@ -409,3 +492,60 @@ body
     color : red;
   }
 
+  .APropos
+{
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom : 3%;
+
+}
+
+  #InfosAPropos
+  {
+      overflow-y: hidden;
+      overflow-x: scroll;
+      display: flex;
+      flex-direction: row;
+      margin: auto;
+      padding-bottom: 5%;
+      scroll-snap-type: x mandatory;
+      column-gap: 20em;
+  }
+
+  .Infos
+{
+    border-style: solid;
+    border-color: #111;
+    border-width: 0.5px;
+    min-width: 90%;
+    scroll-snap-align: center;
+    text-align: left;
+    justify-content: left;
+    position: relative;
+    font-size: 1rem;
+    box-shadow: 2px 2px 10px grey;
+    margin-left: 3%;
+    margin-right: 3%;
+    
+
+}
+
+ul
+{
+    word-wrap: break-word;
+    padding-inline-start:3em
+}
+
+h3
+{
+    font-weight: 800;
+    font-size: 1rem;
+    text-align: center;
+}
+
+h4
+{
+    font-weight: 800;
+    font-size: 1rem;
+    text-align: center;
+}
