--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body 
 {
     margin-top: 4em;
-    background: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 1) 20% ),url('images/WorldsAdrift.jpg') no-repeat center fixed ;
+    background: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 1) 20% ),url('Images/WorldsAdrift.jpg') no-repeat center fixed ;
     background-size: cover;
     overflow-x: hidden;
     font-size: larger;
