Changed color palet and made it more responsive

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,22 +16,32 @@ body
     top : 0;
     left: 0;
     height: 3.3em;
-    background-color: rgb(12, 85, 154);
+    background-color: rgb(226, 143, 9);
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     color:aliceblue;
     position: fixed;
     z-index: 3;
 }
 
+
+.TopBarHam
+{
+  padding-top: 0.5em;
+}
 #StickyName
 {
-    padding-top: 1%;
+    padding-top: 0.5em;
     padding-left: 20px;
     height: 50px;
     width: 50px;
     padding-right: 1380px;
+}
+
+#StickyName a
+{
+  color:#000000;
 }
 
 #StickyMenu
@@ -62,7 +72,7 @@ body
 
 .HeaderText
 {
-    color: cyan;
+    color: rgb(226, 143, 9);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -157,7 +167,7 @@ body
 {
     font-size: 20px;
     font-weight: 500;
-    color: rgb(2, 120, 26);
+    color: rgb(22, 2, 120);
 }
 
 .Portfolio
@@ -178,9 +188,13 @@ body
   margin: auto;
   padding-bottom: 5%;
   scroll-snap-type: x mandatory;
+  column-gap: 20em;
 }
 
-
+.folioItem
+{
+  scroll-snap-align: center;
+}
 
 .folioItem img
 {
@@ -284,7 +298,7 @@ body
       scroll-snap-align: center;
       text-align: left;
       position: relative;
-      font-size: 1rem;
+      font-size:1.2rem;
       box-shadow: 2px 2px 10px grey;
       
     }
@@ -294,8 +308,8 @@ body
       flex-direction: column;
       row-gap: 15%;
       width: 45%;
-      background-color: rgb(12, 85, 154);;
-      color: #ffffff;
+      background-color: rgb(226, 143, 9);;
+      color: #000000;
       vertical-align:text-top;
       text-align: center;
       text-transform: uppercase;
@@ -317,7 +331,7 @@ body
     .Post
     {
       margin-top: 3%;
-      font-size: 1.1rem;
+      font-size: 1.1em;
       font-weight: 500;
       text-decoration: underline;
     }
@@ -329,20 +343,20 @@ body
       border-width: 0.5px;
       text-align:start;
       margin-top: 1.5%;
-      font-size: 1rem;
+      font-size: 1em;
       height: 100%;
       
     }
   
     .Duration
     {
-      font-size: 0.7rem;
+      font-size: 1em;
       margin-top: 3%;
     }
     .WorkPlace
     {
       margin-top: 2%;
-      font-size: 1rem;
+      font-size: 1.1em;
       font-weight: 500;
     }
   
@@ -383,7 +397,7 @@ body
     border-color: #111;
     border-width: 0.5px;
     min-width: 90%;
-    min-height: 10em;
+    min-height: 20em;
     scroll-snap-align: center;
     text-align: left;
     position: relative;
@@ -392,13 +406,12 @@ body
   }
   .LeftPartEd
   {
-    
     display: flex;
     flex-direction: column;
     row-gap: 15%;
     width: 45%;
-    background-color: rgb(12, 85, 154);;
-    color: #ffffff;
+    background-color: rgb(226, 143, 9);;
+    color: #000000;
     vertical-align:text-top;
     text-align: center;
     text-transform: uppercase;
@@ -414,13 +427,13 @@ body
     row-gap: 15%;
     width: 60%;
     text-align: center;
-    padding: 1.5% 1.5% 1.5% 1.5%;
+    padding: 1.5% 0 0 0;
   }
 
   .EdTitle
   {
     margin-top: 3%;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 500;
     text-decoration: underline;
   }
@@ -428,7 +441,7 @@ body
   .School
   {
     margin-top: 2%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 500;
   }
 
@@ -470,7 +483,7 @@ body
 
   #ITSkillsShard
   {
-    color:rgb(4, 168, 23);
+    color:rgb(23, 4, 168);
     border-style: solid;
     border-color: #111;
     border-width: 0.5px;
