--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 body 
 {
     margin-top: 4em;
-    background: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 1) 20% ),url('Images/WorldsAdrift.jpg') no-repeat center fixed ;
+    background: linear-gradient(to bottom, rgba(245, 246, 252, 0), rgba(0, 0, 0, 1) 20% ),url('Images/Other/WorldsAdrift.jpg') no-repeat center fixed ;
     background-size: cover;
     overflow-x: hidden;
     font-size: larger;
@@ -476,7 +476,7 @@ body
     column-gap: 20em;
   }
 
-  #ITSkillsShard
+  .ITSkillsShard
   {
     color:rgb(23, 4, 168);
     border-style: solid;
@@ -558,11 +558,7 @@ h4
     text-align: center;
 }
 
-#P1I
-{
-  height: 18px;
-  border-style: outset;
-}
+
 
 #P1C
 {
@@ -589,11 +585,12 @@ h4
 
 #navigationPoints span 
 {
+  border-style: outset;
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 12px;
+  width: 12px;
   background-color: #bbb;
-  border-radius: 50%;
+  border-radius: 30%;
   display: inline-block;
   border-color: rgb(226, 143, 9);;
 }
