--- a/stylesheet.css
+++ b/stylesheet.css
@@ -561,27 +561,10 @@ h4
 }
 
 
-
-#P1C
-{
-  height: 18px;
-  border-style: outset;
-}
-
-#P1J
-{
-  height: 18px;
-  border-style: outset;
-}
-
-#P1S
-{
-  height: 18px;
-  border-style: outset;
-}
-
 #navigationPoints
 {
+  margin-top: 2vh;
+  margin-bottom: 2vh;
   font-size: 3.5em;
   display: flex;
   justify-content: center;
