--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,7 +173,7 @@ body
   margin: auto;
   padding-bottom: 5vh;
   scroll-snap-type: x mandatory;
-  column-gap: 20em;
+  column-gap: 0em;
   height: fit-content;
   
 }
@@ -591,4 +591,15 @@ h4
   background-color: rgb(226, 143, 9);
 }
 
+.folioTitle
+{
+  color: black;
+  font-weight: bold;
+}
 
+.folioLink
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
